# Patterns

Builder Design Pattern/: main.cpp
Factory/: Bike.cpp  Bike.h  CMakeLists.txt  Car.cpp  Car.h  ConcreteVehicleFactory_1.cpp  ConcreteVehicleFactory_1.h  IVehicle.h  IVehicleFactory.h  main.cpp
Factory Method/: CMakeLists.txt  main.cpp
Factory Method Design Pattern/: README.txt
Factory Method Design Pattern/include/: DebugLogger.h  ErrorLogger.h  ErrorLoggerFactory.h  ILogger.h  InfoLoggerFactory.h
Factory Method Design Pattern/src/: InfoLogger.cpp
Factory Method/include/: DebugLoggerFactory.h  ILoggerFactory.h  InfoLogger.h
Factory Method/src/: DebugLoggerFactory.cpp  ErrorLoggerFactory.cpp  InfoLoggerFactory.cpp
Observer Design Pattern/: CMakeLists.txt  main.cpp
Observer Design Pattern/include/: BloombergWeatherNews.h  IObserver.h  RadioStation.h  WeatherServer.h  WeatherStation.h
Observer Design Pattern/src/: BloombergWeatherNews.cpp  RadioStation.cpp  WeatherServer.cpp  WeatherStation.cpp
Prototype Design Pattern/: CMakeLists.txt  main.cpp
Prototype Design Pattern/include/: INetworkDevice.h  NetworkFactory.h  Router.h
Prototype Design Pattern/src/: NetworkFactory.cpp  Router.cpp
Prototype Design Pattern/types/: Types.h
Simple Factory Design Pattern/: CMakeLists.txt  main.cpp
Simple Factory Design Pattern/include/: SimpleFactoryMethod.h
Simple Factory Design Pattern/src/: DebugLogger.cpp  ErrorLogger.cpp  SimpleFactoryMethod.cpp
Simple Factory Design Pattern/types/: Types.h
Singleton/: CMakeLists.txt  FriendFunction.cpp  FriendFunction.h  Logger.cpp  Logger.h  main.cpp
Singleton Design Pattern/: CMakeLists.txt  Logger.cpp  Logger.h  main.cpp
Strategy/: CMakeLists.txt  CreditCard.h  Crypto.cpp  ShoppingCart.cpp  ShoppingCart.h  main.cpp
Strategy Design Pattern/: CreditCard.cpp  Crypto.h  IPaymentStrategy.h  PayPal.cpp  PayPal.h
